added minted and reduced text size

--- a/General Resume.html
+++ b/General Resume.html
@@ -18,13 +18,21 @@
   		<span class="contact_info"><span style="font-weight: bold;">4B Software Engineering</span></span><br>
   		<span class="contact_info_tag">Email:&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="contact_info">ooolagok@uwaterloo.ca</span><br>
   		<span class="contact_info_tag">Phone:</span> <span class="contact_info">(628)-444-8341</span><br>
-  		<span class="contact_info_tag">GitHub username:</span> <span class="contact_info">Demi-O</span><br>
+  		<span class="contact_info_tag">GitHub:</span> <span class="contact_info">Demi-O</span><br>
   		<span class="contact_info_tag">Website:</span> <span class="contact_info">demiladeolagoke.com</span>
   	</div>
   </div>
 
   <div class ="section_head">
     Work Experience
+  </div>
+  <div class="coop_job">
+    <span class="subsection_head">Minted</span>
+    <span class="time_span">September 2016 - Present</span><br>
+    <span class="job_title">Software Engineer Intern</span>
+    <ul>
+      <li>Technology/Languages used: Javascript, React(Redux), Python, Git & MySQL</li>
+    </ul>
   </div>
   <div class="coop_job">
     <span class="subsection_head">nanoPay</span>
@@ -92,7 +100,7 @@
   </div>
   <div class="project">
   	<span class="subsection_head">Tilde</span>
-  	<span class="time_span">August 2015 - Present</span><br>
+  	<span class="time_span">August 2015 - December 2015</span><br>
   	<span class="project_type">Windows Development</span>
   	<ul>
   		<li>Gesture control tool for controlling computer applications using a smartphone</li>
