moved education to top and cut down words in work exp

--- a/General Resume.html
+++ b/General Resume.html
@@ -15,12 +15,26 @@
   		Olagoke
   	</div>
   	<div id="contact_info_div">
-  		<span class="contact_info"><span style="font-weight: bold;">4B Software Engineering</span></span><br>
+  		<span class="contact_info"><span style="font-weight: bold;">Software Engineering (Class of 2017)</span></span><br>
   		<span class="contact_info_tag">Email:&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="contact_info">ooolagok@uwaterloo.ca</span><br>
   		<span class="contact_info_tag">Phone:</span> <span class="contact_info">(628)-444-8341</span><br>
   		<span class="contact_info_tag">GitHub:</span> <span class="contact_info">Demi-O</span><br>
   		<span class="contact_info_tag">Website:</span> <span class="contact_info">demiladeolagoke.com</span>
   	</div>
+  </div>
+
+  <div class = "section_head">
+    Education
+  </div>
+  <div class="section_info">
+    <div class="activity">
+        <span class="subsection_head">University of Waterloo</span>
+        <span class="time_span">September 2012 - Present</span><br>
+        <span class="activity_info">Candidate for Bachelor of Software Engineering,&nbsp;</span>Co-operative Program
+        <ul>
+          <li>Operating Systems: Incrementally developed an operating system on a Keil MCB1700 board</li>
+        </ul>
+    </div>
   </div>
 
   <div class ="section_head">
@@ -31,7 +45,7 @@
     <span class="time_span">September 2016 - Present</span><br>
     <span class="job_title">Software Engineer Intern</span>
     <ul>
-      <li>Technology/Languages used: Javascript, React(Redux), Python, Git & MySQL</li>
+      <li>Technology/Languages used: Javascript, React(Redux), Python, Node.js, Git & MySQL</li>
     </ul>
   </div>
   <div class="coop_job">
@@ -39,11 +53,11 @@
     <span class="time_span">January 2016 - April 2016</span><br>
     <span class="job_title">Full Stack Developer</span>
     <ul>
-      <li>Implemented features for MintChip such as request money and transaction limits</li>
-      <li>Improved existing MintChip features such as add & delete contacts</li>
-      <li>Implemented features for the loyalty portal such as real time dashboard updates</li>
-      <li>Implemented features for the MintChip Android application such as data caching</li>
-      <li>Technology/Languages used: Javascript, Node.js, AngularJS, Loopback framework, REST API, Java, SQLite, Android Studio, Git & MongoDB</li>
+      <li>Implemented API endpoints for MintChip features such as request money and transaction limits</li>
+      <li>Improved existing MintChip features such as add & delete contacts for better UX</li>
+      <li>Implemented data caching on the MintChip Android application to decrease load times</li>
+      <li>Implemented real time dashboard updates for the loyalty program merchant portal</li>
+      <li>Technology/Languages used: Javascript, Node.js, AngularJS, Loopback, Java, SQLite, Android Studio, Git & MongoDB</li>
     </ul>
   </div>
   <div class="coop_job">
@@ -51,11 +65,10 @@
     <span class="time_span">May 2015 - August 2015</span><br>
     <span class="job_title">Undergraduate Research Assistant</span>
     <ul>
-      <li>Worked with a fellow coop to develop an application used for research into data exploration techniques of geotagged information on a multitouch tabletop device</li>
-      <li>Worked on the server used to send information across all devices</li>
-      <li>Implemented ways to draw a user's attention to certain icons on the table</li>
-      <li>Created data visualizations from the log files</li>
-      <li>Conducted studies and taught participants how to use the application</li>
+      <li>Developed a multi-device application used for Human Computer Interaction research</li>
+      <li>Enabled the exchange of information across all devices</li>
+      <li>Implemented techniques to draw user attention to certain icons on the tabletop device</li>
+      <li>Developed a separate application to parse and create visualizations from the log files</li>
       <li>Technology/Languages used: C#, Javascript, Node.js, Processing, Git, GIMP & Visual Studio</li>
     </ul>
   </div>
@@ -64,8 +77,7 @@
     <span class="time_span">September 2014 - December 2014</span><br>
     <span class="job_title">Software Test Associate</span>
     <ul>
-      <li>Created and executed automated software test scripts for the BlackBerry Assistant</li>
-      <li>Fixed, updated and improved automated test scripts for the BlackBerry Assistant</li>
+      <li>Fixed, updated and created automated software test scripts for the BlackBerry Assistant</li>
       <li>Reported bugs and followed up with developers to ensure they were fixed</li>
       <li>Manually tested the BlackBerry Assistant and gave suggestions for improvements</li>
       <li>Technology/Languages used: Robot Framework, JIRA & Git</li>
@@ -74,11 +86,10 @@
   <div class="coop_job">
     <span class="subsection_head">Mabel's Labels</span>
     <span class="time_span">January 2014 - April 2014</span><br>
-    <span class="job_title">Developer/Tester</span>
+    <span class="job_title">Developer</span>
     <ul>
-      <li>Developed an application capable of measuring the height and depth of each character of a given font</li>
-      <li>Created a wiki page with instructons on how to use the application</li>
-      <li>Communicated with personnel in other departments to resolve service tickets</li>
+      <li>Developed an application to measure characters of a given font for a better printing experience</li>
+      <li>Created documentation for the application which included instructons on how to use it</li>
       <li>Adjusted data and stored procedures on a MySQL database</li>
       <li>Technology/Languages used: C#, MySQL, Subversion & Visual Studio</li>
     </ul>
@@ -92,10 +103,10 @@
   	<span class="time_span">March 2016 - Present</span><br>
   	<span class="project_type">Web Development</span>
   	<ul>
-  		<li>Website for students to share tools they have made</li>
-      <li>Set up the Database</li>
-  		<li>Developed the API that is exposed to the frontend</li>
-      <li>Technology/Languages used: Node.js, Javascript, MongoDB & Git</li>
+  		<li>Website for students to share applications that they made</li>
+      <li>Set up the Database and created the relationships between the models</li>
+  		<li>Developed API endpoints used by the frontend</li>
+      <li>Technology/Languages used: Node.js, Javascript, Loopback, MongoDB & Git</li>
   	</ul>
   </div>
   <div class="project">
@@ -105,7 +116,7 @@
   	<ul>
   		<li>Gesture control tool for controlling computer applications using a smartphone</li>
   		<li>Implemented control of other programs from the main program</li>
-  		<li>Implemented real-time notifications</li>
+  		<li>Implemented real-time notifications to alert users of actions made from the smartphone</li>
   		<li>Technology/Languages used: C#, Visual Studio & Git</li>
   	</ul>
   </div>
@@ -143,7 +154,7 @@
       <li>Technology/Languages used: Java & Eclipse</li>
   	</ul>
   </div> -->
-  <div class="project">
+  <!-- <div class="project">
   	<span class="subsection_head">Tic Tac Toe By 2Dp</span>
   	<span class="time_span">June 2013 - July 2013</span><br>
   	<span class="project_type">Android Development</span>
@@ -154,22 +165,8 @@
       <li>Used views to determine where on the board the user clicked</li>
       <li>Technology/Languages used: Java & Eclipse</li>
   	</ul>
-  </div>
+  </div> -->
   <span class="project_type">(Other projects available on website: www.demiladeolagoke.com)</span>
-
-  <div class = "section_head">
-    Education
-  </div>
-  <div class="section_info">
-    <div class="activity">
-        <span class="subsection_head">University of Waterloo</span>
-        <span class="time_span">September 2012 - Present</span><br>
-        <span class="activity_info">Candidate for Bachelor of Software Engineering,&nbsp;</span>Co-operative Program
-        <ul>
-          <li>Operating Systems: Incrementally developed an operating system on a Keil MCB1700 board</li>
-        </ul>
-    </div>
-  </div>
 
 	<div class ="section_head">
 		Activities & Interests
