--- a/General Resume.html
+++ b/General Resume.html
@@ -68,7 +68,7 @@
       <li>Developed a multi-device application used for Human Computer Interaction research</li>
       <li>Enabled the exchange of information across all devices</li>
       <li>Implemented techniques to draw user attention to certain icons on the tabletop device</li>
-      <li>Developed a separate application to parse and create visualizations from the log files</li>
+      <li>Developed a separate application create visualizations from the log files</li>
       <li>Technology/Languages used: C#, Javascript, Node.js, Processing, Git, GIMP & Visual Studio</li>
     </ul>
   </div>
@@ -89,7 +89,7 @@
     <span class="job_title">Developer</span>
     <ul>
       <li>Developed an application to measure characters of a given font for a better printing experience</li>
-      <li>Created documentation for the application which included instructons on how to use it</li>
+      <li>Created documentation for the application which included instructions on how to use it</li>
       <li>Adjusted data and stored procedures on a MySQL database</li>
       <li>Technology/Languages used: C#, MySQL, Subversion & Visual Studio</li>
     </ul>
@@ -116,7 +116,7 @@
   	<ul>
   		<li>Gesture control tool for controlling computer applications using a smartphone</li>
   		<li>Implemented control of other programs from the main program</li>
-  		<li>Implemented real-time notifications to alert users of actions made from the smartphone</li>
+  		<li>Implemented real time notifications to alert users of actions made from the smartphone</li>
   		<li>Technology/Languages used: C#, Visual Studio & Git</li>
   	</ul>
   </div>
