updated Minted job title

--- a/General Resume.html
+++ b/General Resume.html
@@ -43,7 +43,7 @@
   <div class="coop_job">
     <span class="subsection_head">Minted</span>
     <span class="time_span">September 2016 - Present</span><br>
-    <span class="job_title">Software Engineer Intern</span>
+    <span class="job_title">Software Engineer</span>
     <ul>
       <li>Technology/Languages used: Javascript, React(Redux), Python, Node.js, Git & MySQL</li>
     </ul>
