--- a/General Resume.html
+++ b/General Resume.html
@@ -32,7 +32,7 @@
         <span class="time_span">September 2012 - Present</span><br>
         <span class="activity_info">Candidate for Bachelor of Software Engineering,&nbsp;</span>Co-operative Program
         <ul>
-          <li>Operating Systems: Incrementally developed an operating system on a Keil MCB1700 board</li>
+          <li>Courses: Cooperative and Adaptive Algorithms, Computer Networks, Concurrent and Parallel Programming, Embedded Software, Operating Systems</li>
         </ul>
     </div>
   </div>
@@ -45,7 +45,8 @@
     <span class="time_span">September 2016 - Present</span><br>
     <span class="job_title">Software Engineer</span>
     <ul>
-      <li>Technology/Languages used: Javascript, React(Redux), Python, Node.js, Git & MySQL</li>
+      <li>Mitigated revenue loss by fixing issues preventing users from purchasing products</li>
+      <li>Technology/Languages used: Javascript, React(Redux), Python, Node.js, Git, MySQL</li>
     </ul>
   </div>
   <div class="coop_job">
@@ -53,11 +54,11 @@
     <span class="time_span">January 2016 - April 2016</span><br>
     <span class="job_title">Full Stack Developer</span>
     <ul>
-      <li>Implemented API endpoints for MintChip features such as request money and transaction limits</li>
-      <li>Improved existing MintChip features such as add & delete contacts for better UX</li>
-      <li>Implemented data caching on the MintChip Android application to decrease load times</li>
-      <li>Implemented real time dashboard updates for the loyalty program merchant portal</li>
-      <li>Technology/Languages used: Javascript, Node.js, AngularJS, Loopback, Java, SQLite, Android Studio, Git & MongoDB</li>
+      <li>Worked on MintChip, a government-backed digital currency</li>
+      <li>Developed features such as p2p money requests and fraud mitigation using transaction limits</li>
+      <li>Implemented data caching on the android application to decrease load times</li>
+      <li>Created an invite system where invited users could sign up and instantly receive the money sent to them</li>
+      <li>Technology/Languages used: Javascript, Node.js, AngularJS, Loopback, Java, SQLite, Android Studio, Git, MongoDB</li>
     </ul>
   </div>
   <div class="coop_job">
@@ -65,35 +66,31 @@
     <span class="time_span">May 2015 - August 2015</span><br>
     <span class="job_title">Undergraduate Research Assistant</span>
     <ul>
-      <li>Developed a multi-device application used for Human Computer Interaction research</li>
-      <li>Enabled the exchange of information across all devices</li>
-      <li>Implemented techniques to draw user attention to certain icons on the tabletop device</li>
-      <li>Developed a separate application create visualizations from the log files</li>
-      <li>Technology/Languages used: C#, Javascript, Node.js, Processing, Git, GIMP & Visual Studio</li>
+      <li>Worked on an application used for HCI research into data exploration of geotagged information using multiple connected tabletop and tablet devices</li>
+      <li>Significantly improved communication between devices from simple pinging to synchronous transfer and processing of the tablets' orientation in space and images data</li>
+      <li>Implemented HCI techniques for surfacing context-relevant information to users</li>
+      <li>Created summary visualizations from application logs for researchers to gain insight into user usage patterns</li>
+      <li>Technology/Languages used: C#, Javascript, Node.js, Processing 2, Git, Visual Studio</li>
     </ul>
   </div>
   <div class="coop_job">
-    <span class="subsection_head">BlackBerry Ltd.</span>
+    <span class="subsection_head">BlackBerry</span>
     <span class="time_span">September 2014 - December 2014</span><br>
-    <span class="job_title">Software Test Associate</span>
+    <span class="job_title">Software Test Engineer</span>
     <ul>
-      <li>Fixed, updated and created automated software test scripts for the BlackBerry Assistant</li>
-      <li>Reported bugs and followed up with developers to ensure they were fixed</li>
-      <li>Manually tested the BlackBerry Assistant and gave suggestions for improvements</li>
-      <li>Technology/Languages used: Robot Framework, JIRA & Git</li>
+      <li>Developed unit, integration and UX tests to achieve full test coverage for the BlackBerry Assistant</li>
+      <li>Technology/Languages used: Robot Framework, JIRA, Git</li>
     </ul>
   </div>
-  <div class="coop_job">
+  <!-- <div class="coop_job">
     <span class="subsection_head">Mabel's Labels</span>
     <span class="time_span">January 2014 - April 2014</span><br>
     <span class="job_title">Developer</span>
     <ul>
       <li>Developed an application to measure characters of a given font for a better printing experience</li>
-      <li>Created documentation for the application which included instructions on how to use it</li>
-      <li>Adjusted data and stored procedures on a MySQL database</li>
-      <li>Technology/Languages used: C#, MySQL, Subversion & Visual Studio</li>
+      <li>Technology/Languages used: C#, MySQL, Subversion, Visual Studio</li>
     </ul>
-  </div>
+  </div> -->
 
   <div id="push_down_projects" class ="section_head">
   	Projects
@@ -101,23 +98,20 @@
   <div class="project">
   	<span class="subsection_head">WatHub (Fourth Year Design Project)</span>
   	<span class="time_span">March 2016 - Present</span><br>
-  	<span class="project_type">Web Development</span>
   	<ul>
   		<li>Website for students to share applications that they made</li>
-      <li>Set up the Database and created the relationships between the models</li>
-  		<li>Developed API endpoints used by the frontend</li>
-      <li>Technology/Languages used: Node.js, Javascript, Loopback, MongoDB & Git</li>
+      <li>Set up the database and currently working on the API used by the frontend</li>
+      <li>Technology/Languages used: Node.js, Javascript, Loopback, MongoDB, Git</li>
   	</ul>
   </div>
   <div class="project">
   	<span class="subsection_head">Tilde</span>
   	<span class="time_span">August 2015 - December 2015</span><br>
-  	<span class="project_type">Windows Development</span>
   	<ul>
-  		<li>Gesture control tool for controlling computer applications using a smartphone</li>
-  		<li>Implemented control of other programs from the main program</li>
-  		<li>Implemented real time notifications to alert users of actions made from the smartphone</li>
-  		<li>Technology/Languages used: C#, Visual Studio & Git</li>
+  		<li>Windows application that allows control of other applications by gestures from a smartphone</li>
+  		<li>Implemented sending of instructions to selected applications from the main program</li>
+  		<li>Implemented real-time desktop notifications to alert users of actions made on the smartphone</li>
+  		<li>Technology/Languages used: C#, Visual Studio, Git</li>
   	</ul>
   </div>
   <!-- <div class="project">
@@ -128,19 +122,17 @@
   		<li>Single page website developed from scratch</li>
   		<li>Made the website responsive and interactive</li>
   		<li>Implemented sending of emails without refreshing the page</li>
-  		<li>Technology/Languages used: HTML, CSS, Javascript (jQuery), PHP, Ajax & Git</li>
+  		<li>Technology/Languages used: HTML, CSS, Javascript (jQuery), PHP, Ajax, Git</li>
   	</ul>
   </div> -->
   <div class="project">
   	<span class="subsection_head">Snake In The Cage</span>
   	<span class="time_span">May 2015</span><br>
-  	<span class="project_type">Game Development</span>
   	<ul>
   		<li>Nicholas Cage themed snake game with a battle mode developed with three others</li>
-  		<li>Added sprites, created prefabs and gave game objects their needed attributes</li>
       <li>Peer programmed to add food generation, score counting, speed up and slow down</li>
-      <li>Created the grass background and pictures for the snake head animation</li>
-      <li>Technology/Languages used: C#, Unity 5, GIMP & Git</li>
+      <li>Created visual assets such as the grass background and snake head animation</li>
+      <li>Technology/Languages used: C#, Unity 5, GIMP, Git</li>
   	</ul>
   </div>
   <!-- <div class="project">
@@ -151,7 +143,7 @@
   		<li>Fortune teller application developed with a friend</li>
       <li>Made use of the device accelerometer to sense user input</li>
       <li>Used the media API to give the user an audible response</li>
-      <li>Technology/Languages used: Java & Eclipse</li>
+      <li>Technology/Languages used: Java, Eclipse</li>
   	</ul>
   </div> -->
   <!-- <div class="project">
@@ -163,7 +155,7 @@
       <li>Developed the artificial intelligence</li>
       <li>Developed the algorithm used to check for wins</li>
       <li>Used views to determine where on the board the user clicked</li>
-      <li>Technology/Languages used: Java & Eclipse</li>
+      <li>Technology/Languages used: Java, Eclipse</li>
   	</ul>
   </div> -->
   <span class="project_type">(Other projects available on website: www.demiladeolagoke.com)</span>
