made resume one page and some more content changes

--- a/General Resume.html
+++ b/General Resume.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>General Resume</title>
     <link rel="stylesheet" href="resume.css"/>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,700,800,900' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -28,12 +27,13 @@
   </div>
   <div class="section_info">
     <div class="activity">
-        <span class="subsection_head">University of Waterloo</span>
-        <span class="time_span">September 2012 - Present</span><br>
-        <span class="activity_info">Candidate for Bachelor of Software Engineering,&nbsp;</span>Co-operative Program
-        <ul>
-          <li>Courses: Cooperative and Adaptive Algorithms, Computer Networks, Concurrent and Parallel Programming, Embedded Software, Operating Systems</li>
-        </ul>
+      <span class="subsection_head">University of Waterloo</span>
+      <span class = subsection_role>Candidate for Bachelor of Software Engineering</span>
+      <span class="subsection_details">September 2012 - Present</span>
+      <ul>
+        <li>Courses: Cooperative and Adaptive Algorithms, Computer Networks, Concurrent and Parallel Programming, Embedded Software, Operating Systems</li>
+        <li>Events Coordinator (May 2015 - April 2016) of the Black Association for Student Expression</li>
+      </ul>
     </div>
   </div>
 
@@ -42,53 +42,52 @@
   </div>
   <div class="coop_job">
     <span class="subsection_head">Minted</span>
-    <span class="time_span">September 2016 - Present</span><br>
-    <span class="job_title">Software Engineer</span>
+    <span class = subsection_role>Software Engineer</span>
+    <span class="subsection_details">San Francisco, CA | September 2016 - Present</span>
     <ul>
       <li>Mitigated revenue loss by fixing issues preventing users from purchasing products</li>
-      <li>Technology/Languages used: Javascript, React(Redux), Python, Node.js, Git, MySQL</li>
+      <li>Technology/Languages: Javascript, React (Redux), Python, Node.js, Git, MySQL</li>
     </ul>
   </div>
   <div class="coop_job">
     <span class="subsection_head">nanoPay</span>
-    <span class="time_span">January 2016 - April 2016</span><br>
-    <span class="job_title">Full Stack Developer</span>
+    <span class = subsection_role>Full Stack Developer</span>
+    <span class="subsection_details">Toronto, ON | January 2016 - April 2016</span>
     <ul>
       <li>Worked on MintChip, a government-backed digital currency</li>
       <li>Developed features such as p2p money requests and fraud mitigation using transaction limits</li>
-      <li>Implemented data caching on the android application to decrease load times</li>
+      <li>Decreases load times on the android application by implementing data caching</li>
       <li>Created an invite system where invited users could sign up and instantly receive the money sent to them</li>
-      <li>Technology/Languages used: Javascript, Node.js, AngularJS, Loopback, Java, SQLite, Android Studio, Git, MongoDB</li>
+      <li>Technology/Languages: Javascript, Node.js, AngularJS, Loopback, Java, SQLite, Android Studio, Git, MongoDB</li>
     </ul>
   </div>
   <div class="coop_job">
     <span class="subsection_head">University of Waterloo</span>
-    <span class="time_span">May 2015 - August 2015</span><br>
-    <span class="job_title">Undergraduate Research Assistant</span>
+    <span class = subsection_role>Undergraduate Research Assistant</span>
+    <span class="subsection_details"> Waterloo, ON | May 2015 - August 2015</span>
     <ul>
       <li>Worked on an application used for HCI research into data exploration of geotagged information using multiple connected tabletop and tablet devices</li>
-      <li>Significantly improved communication between devices from simple pinging to synchronous transfer and processing of the tablets' orientation in space and images data</li>
+      <li>Significantly improved communication between devices from simple pinging to asynchronous real-time transfer of information such as the tablets' orientation in space and selected image urls</li>
       <li>Implemented HCI techniques for surfacing context-relevant information to users</li>
       <li>Created summary visualizations from application logs for researchers to gain insight into user usage patterns</li>
-      <li>Technology/Languages used: C#, Javascript, Node.js, Processing 2, Git, Visual Studio</li>
+      <li>Technology/Languages: C#, Javascript, Node.js, Processing 2, Git, Visual Studio</li>
     </ul>
   </div>
   <div class="coop_job">
     <span class="subsection_head">BlackBerry</span>
-    <span class="time_span">September 2014 - December 2014</span><br>
-    <span class="job_title">Software Test Engineer</span>
+    <span class = subsection_role>Software Test Engineer</span>
+    <span class="subsection_details">Mississauga, ON | September 2014 - December 2014</span>
     <ul>
       <li>Developed unit, integration and UX tests to achieve full test coverage for the BlackBerry Assistant</li>
-      <li>Technology/Languages used: Robot Framework, JIRA, Git</li>
+      <li>Technology/Languages: Robot Framework, Git</li>
     </ul>
   </div>
   <!-- <div class="coop_job">
     <span class="subsection_head">Mabel's Labels</span>
-    <span class="time_span">January 2014 - April 2014</span><br>
-    <span class="job_title">Developer</span>
+    <span class="subsection_details">Developer | Hamilton, ON | January 2014 - April 2014</span>
     <ul>
       <li>Developed an application to measure characters of a given font for a better printing experience</li>
-      <li>Technology/Languages used: C#, MySQL, Subversion, Visual Studio</li>
+      <li>Technology/Languages: C#, MySQL, Subversion, Visual Studio</li>
     </ul>
   </div> -->
 
@@ -97,97 +96,68 @@
   </div>
   <div class="project">
   	<span class="subsection_head">WatHub (Fourth Year Design Project)</span>
-  	<span class="time_span">March 2016 - Present</span><br>
+  	<span class="subsection_details">March 2016 - Present</span>
   	<ul>
   		<li>Website for students to share applications that they made</li>
       <li>Set up the database and currently working on the API used by the frontend</li>
-      <li>Technology/Languages used: Node.js, Javascript, Loopback, MongoDB, Git</li>
+      <li>Technology/Languages: Node.js, Javascript, Loopback, MongoDB, Git</li>
   	</ul>
   </div>
   <div class="project">
   	<span class="subsection_head">Tilde</span>
-  	<span class="time_span">August 2015 - December 2015</span><br>
+  	<span class="subsection_details">August 2015 - December 2015</span>
   	<ul>
-  		<li>Windows application that allows control of other applications by gestures from a smartphone</li>
+  		<li>Windows application that allows control of other applications through gestures from a smartphone</li>
   		<li>Implemented sending of instructions to selected applications from the main program</li>
   		<li>Implemented real-time desktop notifications to alert users of actions made on the smartphone</li>
-  		<li>Technology/Languages used: C#, Visual Studio, Git</li>
+  		<li>Technology/Languages: C#, Visual Studio, Git</li>
   	</ul>
   </div>
   <!-- <div class="project">
   	<span class="subsection_head">Personal Website</span>
-  	<span class="time_span">June 2015 - July 2015</span><br>
-  	<span class="project_type">Web Development</span>
+  	<span class="subsection_details">June 2015 - July 2015</span>
   	<ul>
   		<li>Single page website developed from scratch</li>
   		<li>Made the website responsive and interactive</li>
   		<li>Implemented sending of emails without refreshing the page</li>
-  		<li>Technology/Languages used: HTML, CSS, Javascript (jQuery), PHP, Ajax, Git</li>
+  		<li>Technology/Languages: HTML, CSS, Javascript (jQuery), PHP, Ajax, Git</li>
   	</ul>
   </div> -->
   <div class="project">
   	<span class="subsection_head">Snake In The Cage</span>
-  	<span class="time_span">May 2015</span><br>
+  	<span class="subsection_details">May 2015</span>
   	<ul>
-  		<li>Nicholas Cage themed snake game with a battle mode developed with three others</li>
+  		<li>Nicholas Cage themed snake game with a battle mode developed with three others at a Game Jam</li>
       <li>Peer programmed to add food generation, score counting, speed up and slow down</li>
       <li>Created visual assets such as the grass background and snake head animation</li>
-      <li>Technology/Languages used: C#, Unity 5, GIMP, Git</li>
+      <li>Technology/Languages: C#, Unity 5, GIMP, Git</li>
   	</ul>
   </div>
   <!-- <div class="project">
   	<span class="subsection_head">Fortune Teller By 2Dp</span>
-  	<span class="time_span">August 2013</span><br>
-  	<span class="project_type">Android Development</span>
+  	<span class="subsection_details">August 2013</span><br>
   	<ul>
   		<li>Fortune teller application developed with a friend</li>
       <li>Made use of the device accelerometer to sense user input</li>
       <li>Used the media API to give the user an audible response</li>
-      <li>Technology/Languages used: Java, Eclipse</li>
+      <li>Technology/Languages: Java, Eclipse</li>
   	</ul>
   </div> -->
   <!-- <div class="project">
   	<span class="subsection_head">Tic Tac Toe By 2Dp</span>
-  	<span class="time_span">June 2013 - July 2013</span><br>
-  	<span class="project_type">Android Development</span>
+  	<span class="subsection_details">June 2013 - July 2013</span><br>
   	<ul>
   		<li>Tic-tac-toe game developed with a friend</li>
       <li>Developed the artificial intelligence</li>
       <li>Developed the algorithm used to check for wins</li>
       <li>Used views to determine where on the board the user clicked</li>
-      <li>Technology/Languages used: Java, Eclipse</li>
+      <li>Technology/Languages: Java, Eclipse</li>
   	</ul>
   </div> -->
   <span class="project_type">(Other projects available on website: www.demiladeolagoke.com)</span>
 
-	<div class ="section_head">
-		Activities & Interests
+  <div class ="section_head">
+		Interests
 	</div>
-	<div class="section_info">
-		<div class="activity">
-			<span class="subsection_head">UW Black Association for Student Expression</span>
-			<span class="time_span">May 2015 - April 2016</span><br>
-			<span class="activity_info">Events Coordinator</span>
-			<ul>
-        <li>Organized and managed events along with other club executives</li>
-        <li>Booked roooms and needed equipment for club events</li>
-        <li>Created and managed the club's Facebook page</li>
-			</ul>
-		</div>
-		<!-- <div class="activity">
-			<span class="subsection_head">UW African Students Association</span>
-			<span class="time_span">September 2012 - Present</span><br>
-			<span class="activity_info">Member</span>
-			<ul>
-				<li>Volunteered as a dancer at the annual cultural exhibition show TRACES hosted by the club</li>
-			</ul>
-		</div> -->
-		<div class="activity">
-			<span class="subsection_head">Other Interests</span>
-			<ul>
-				<li>I enjoy soccer, dancing (Hip Hop, West African and Salsa), ping pong and console gaming</li>
-			</ul>
-		</div>
-	</div>
-</body>
+		<li>Soccer, dancing (Hip Hop, West African and Salsa), exploring new places, ping pong and console gaming</li></body>
 </html>
