some needed refactoring

--- a/General Resume.html
+++ b/General Resume.html
@@ -31,7 +31,7 @@
       <span class = subsection_role>Candidate for Bachelor of Software Engineering</span>
       <span class="subsection_details">September 2012 - Present</span>
       <ul>
-        <li>Courses: Cooperative and Adaptive Algorithms, Computer Networks, Concurrent and Parallel Programming, Embedded Software, Operating Systems</li>
+        <li>Courses: Cooperative and Adaptive Algorithms, Computer Networks, Concurrent and Parallel Programming, Embedded Software</li>
         <li>Events Coordinator (May 2015 - April 2016) of the Black Association for Student Expression</li>
       </ul>
     </div>
@@ -56,7 +56,7 @@
     <ul>
       <li>Worked on MintChip, a government-backed digital currency</li>
       <li>Developed features such as p2p money requests and fraud mitigation using transaction limits</li>
-      <li>Decreases load times on the android application by implementing data caching</li>
+      <li>Decreased load times on the android application by implementing data caching</li>
       <li>Created an invite system where invited users could sign up and instantly receive the money sent to them</li>
       <li>Technology/Languages: Javascript, Node.js, AngularJS, Loopback, Java, SQLite, Android Studio, Git, MongoDB</li>
     </ul>
@@ -66,7 +66,7 @@
     <span class = subsection_role>Undergraduate Research Assistant</span>
     <span class="subsection_details"> Waterloo, ON | May 2015 - August 2015</span>
     <ul>
-      <li>Worked on an application used for HCI research into data exploration of geotagged information using multiple connected tabletop and tablet devices</li>
+      <li>Worked on an application used for HCI research into data exploration of geotagged information using multiple tablet devices and a tabletop</li>
       <li>Significantly improved communication between devices from simple pinging to asynchronous real-time transfer of information such as the tablets' orientation in space and selected image urls</li>
       <li>Implemented HCI techniques for surfacing context-relevant information to users</li>
       <li>Created summary visualizations from application logs for researchers to gain insight into user usage patterns</li>
@@ -113,16 +113,6 @@
   		<li>Technology/Languages: C#, Visual Studio, Git</li>
   	</ul>
   </div>
-  <!-- <div class="project">
-  	<span class="subsection_head">Personal Website</span>
-  	<span class="subsection_details">June 2015 - July 2015</span>
-  	<ul>
-  		<li>Single page website developed from scratch</li>
-  		<li>Made the website responsive and interactive</li>
-  		<li>Implemented sending of emails without refreshing the page</li>
-  		<li>Technology/Languages: HTML, CSS, Javascript (jQuery), PHP, Ajax, Git</li>
-  	</ul>
-  </div> -->
   <div class="project">
   	<span class="subsection_head">Snake In The Cage</span>
   	<span class="subsection_details">May 2015</span>
@@ -137,7 +127,7 @@
   	<span class="subsection_head">Fortune Teller By 2Dp</span>
   	<span class="subsection_details">August 2013</span><br>
   	<ul>
-  		<li>Fortune teller application developed with a friend</li>
+  		<li>Fortune teller android application developed with a friend</li>
       <li>Made use of the device accelerometer to sense user input</li>
       <li>Used the media API to give the user an audible response</li>
       <li>Technology/Languages: Java, Eclipse</li>
